# word-weight

./: .gitignore  README.md  outline.md  pipeline.py  pyproject.toml
configs/: experiments.yaml  tokenizers.yaml  wikipedia.yaml
results/: correlations.csv  feature_vif.csv  residual_model_coefficients.csv  summary.md  tokenizer_comparison.csv  tokenizer_rif_overlap.csv  top_rif_words.csv
results/baseline_rankings/: top_frequent.csv  top_rare.csv  top_tfidf.csv  top_token_count.csv  top_tokens_per_char.csv
results/distributions/: token_cost_by_tfidf_decile_custom_bpe.csv
results/quadrants/: high_info_high_cost_custom_bpe.csv  high_info_low_cost_custom_bpe.csv  low_info_high_cost_custom_bpe.csv  low_info_low_cost_custom_bpe.csv  quadrant_summary_custom_bpe.csv
results/vocab_simulation/: savings_custom_bpe.csv
rusty-bpe/: Cargo.toml  README.md  pyproject.toml
rusty-bpe/src/: lib.rs  main.rs  pretok.rs  python.rs  stats.rs  tokenizer.rs  trainer.rs
rusty-tfidf/: Cargo.toml  pyproject.toml
rusty-tfidf/src/: corpus.rs  idf.rs  lib.rs  main.rs  python.rs  tf.rs  tfidf.rs  tokenize.rs
src/experiments/: exp01_distribution_analysis.py  exp02_quadrant_analysis.py  exp03_residual_friction.py  exp04_vocab_simulation.py  exp05_tokenizer_comparison.py
src/metrics/: expected_cost_model.py  information_weighted_fragmentation.py  residual_friction.py
src/preprocessing/: build_corpus.py  clean_text.py
src/tfidf/: aggregate_word_scores.py  compute_tfidf.py
src/tokenization/: compute_token_costs.py  load_tokenizers.py  train_bpe.py
src/visualization/: plot_distributions.py  plot_quadrants.py  plot_savings_curves.py
