[package]
name = "rusty-bpe"
version = "0.1.0"
edition = "2024"

[lib]
name = "rusty_bpe"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rusty-bpe"
path = "src/main.rs"

[features]
python = ["dep:pyo3"]

[dependencies]
hashbrown = "0.17.1"
rayon = "1.12.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
