[package]
name = "rusty-tfidf"
version = "0.1.0"
edition = "2024"

[lib]
name = "rusty_tfidf"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rusty-tfidf"
path = "src/main.rs"

[features]
python = ["dep:pyo3"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
